# ocaml-starter-kit

./: LICENSE  Makefile  README.md  app.opam  app.opam.locked  dune-project  opam  opam.locked
lib/: minty.ml
src/: dune  main.ml
test/: dune  test_minty.ml
